fix #89, fix closed sidebar on Safari

--- a/client/styles/components/_sidebar.scss
+++ b/client/styles/components/_sidebar.scss
@@ -191,6 +191,7 @@
     display: block;
   }
   top: 100%;
+  right: #{-70 / $base-font-size}rem;
   padding: #{8 / $base-font-size}rem;
   width: #{110 / $base-font-size}rem;
 }
